# ROS

./: .gitignore  LICENSE  README.md
assets/depth/: black_0.exr  paper_h_0.exr  paper_h_1.exr  paper_l_0.exr  paper_l_4.exr  wood_h_0.exr  wood_h_13.exr  wood_h_18.exr  wood_l_0.exr  wood_l_5.exr  wood_l_8.exr
assets/depth_masked/black_0/: black_0_mask_0_1.exr  black_0_mask_10_0.exr  black_0_mask_11_2.exr  black_0_mask_12_2.exr  black_0_mask_13_2.exr  black_0_mask_14_1.exr  black_0_mask_1_7.exr  black_0_mask_2_1.exr  black_0_mask_3_7.exr  black_0_mask_4_3.exr  black_0_mask_5_7.exr  black_0_mask_6_3.exr  black_0_mask_7_7.exr  black_0_mask_8_7.exr  black_0_mask_9_1.exr
assets/depth_masked/paper_h_0/: paper_h_0_mask_0_7.exr  paper_h_0_mask_10_7.exr  paper_h_0_mask_11_0.exr  paper_h_0_mask_12_2.exr  paper_h_0_mask_13_2.exr  paper_h_0_mask_1_1.exr  paper_h_0_mask_2_1.exr  paper_h_0_mask_3_3.exr  paper_h_0_mask_4_3.exr  paper_h_0_mask_5_7.exr  paper_h_0_mask_6_1.exr  paper_h_0_mask_7_7.exr  paper_h_0_mask_8_1.exr  paper_h_0_mask_9_7.exr
assets/depth_masked/paper_h_1/: paper_h_1_mask_0_7.exr  paper_h_1_mask_10_7.exr  paper_h_1_mask_11_2.exr  paper_h_1_mask_12_3.exr  paper_h_1_mask_13_3.exr  paper_h_1_mask_1_0.exr  paper_h_1_mask_2_1.exr  paper_h_1_mask_3_2.exr  paper_h_1_mask_4_1.exr  paper_h_1_mask_5_7.exr  paper_h_1_mask_6_7.exr  paper_h_1_mask_7_7.exr  paper_h_1_mask_8_1.exr  paper_h_1_mask_9_1.exr
assets/depth_masked/paper_l_0/: paper_l_0_mask_0_7.exr  paper_l_0_mask_10_2.exr  paper_l_0_mask_11_2.exr  paper_l_0_mask_1_1.exr  paper_l_0_mask_2_1.exr  paper_l_0_mask_3_1.exr  paper_l_0_mask_4_7.exr  paper_l_0_mask_5_1.exr  paper_l_0_mask_6_3.exr  paper_l_0_mask_7_7.exr  paper_l_0_mask_8_0.exr  paper_l_0_mask_9_3.exr
assets/depth_masked/paper_l_4/: paper_l_4_mask_0_0.exr  paper_l_4_mask_10_3.exr  paper_l_4_mask_11_7.exr  paper_l_4_mask_12_2.exr  paper_l_4_mask_13_2.exr  paper_l_4_mask_1_7.exr  paper_l_4_mask_2_7.exr  paper_l_4_mask_3_7.exr  paper_l_4_mask_4_7.exr  paper_l_4_mask_5_1.exr  paper_l_4_mask_6_1.exr  paper_l_4_mask_7_3.exr  paper_l_4_mask_8_1.exr  paper_l_4_mask_9_1.exr
assets/depth_masked/wood_h_0/: wood_h_0_mask_0_7.exr  wood_h_0_mask_10_0.exr  (+13 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake  package.xml
src/pickingPoint/assets/: bin_mask_2.exr
src/pickingPoint/include/: pickingPoint.hpp  timer.hpp  utils.hpp
src/pickingPoint/src/: pickingPoint.cpp  timer.cpp  utils.cpp
src/src/: applicant.cpp  pickingPointHandler.cpp  receiver.cpp
(+68 files in other folders)
